# SEND-SLAM

./: .gitignore  LICENSE  README.md  System Diagram.drawio  TODO_Docker_container  calibrate_camera_script.exs  docker_container_setup.sh  dockerfile  init.txt  latest.json  presentation.md
send_slam/: .gitignore  README.md  mix.exs
send_slam/examples/: simple_calibrate_example.exs
send_slam/lib/: send_slam.ex
send_slam/lib/send_slam/: application.ex  calibration_cache.ex  camera_calibrator.ex  camera_producer.ex  client_application_server.ex  docker_handler.ex  example_consumer.ex  frame_broadcaster.ex  image_consumer.ex  image_logger.ex  pose_web_server.ex  slam_handler.ex  timer.ex  video_producer.ex  web_server.ex  web_socket_handler.ex
send_slam/priv/calibration/: latest.json
send_slam/test/: send_slam_test.exs
send_slam/web/: index.html
slam_backends/orb_slam_3/: CMakeLists.txt  licence  orbslam3_mono_networked.cc
